right pane users alignment fixed

--- a/assets/css/home_style.css
+++ b/assets/css/home_style.css
@@ -117,20 +117,27 @@ body {
           padding: 20px;
           border-radius: 5px;
           margin-right: 10px; }
-        body #home-layout #right #right-fixed #users-on-platform .friends-display-content {
-          text-decoration: none;
-          color: #ffffff;
-          padding: 10px; }
         body #home-layout #right #right-fixed #users-on-platform ul {
           width: 80%;
           border-radius: 3px;
-          padding: 10px;
-          margin: 10px;
           transition-duration: .2s; }
-          body #home-layout #right #right-fixed #users-on-platform ul img {
-            height: 30px;
-            width: auto;
-            border-radius: 50%; }
+          body #home-layout #right #right-fixed #users-on-platform ul .friends-display-content {
+            display: flex;
+            justify-content: space-between;
+            text-decoration: none;
+            color: #ffffff;
+            padding: 10px; }
+            body #home-layout #right #right-fixed #users-on-platform ul .friends-display-content .right-pane-user-avatar {
+              width: 30%; }
+              body #home-layout #right #right-fixed #users-on-platform ul .friends-display-content .right-pane-user-avatar img {
+                object-fit: cover;
+                height: 38px;
+                width: 38px;
+                border-radius: 50%; }
+            body #home-layout #right #right-fixed #users-on-platform ul .friends-display-content .right-pane-user-name {
+              display: flex;
+              align-items: center;
+              width: 70%; }
         body #home-layout #right #right-fixed #users-on-platform ul:hover {
           background-color: #3e3e3e; }
         body #home-layout #right #right-fixed #friends-list .friends-display-content {
